# sussed

./: .gitignore  README.md
.copilot/: install-skill.sh
.copilot/sussed-plugin/.claude-plugin/: marketplace.json  plugin.json
.copilot/sussed-plugin/skills/sussed-ai-review/: SKILL.md
.copilot/sussed-plugin/skills/sussed-ai-review/references/: area-recalc.md  description-patterns.md  ideal-profile.md  review-schema.md
.copilot/sussed-plugin/skills/sussed-ai-review/scripts/: README.md  batch_save.sh  make_review.py  summarize_prepared.py
.copilot/sussed-plugin/skills/sussed-cottage-review/: SKILL.md
.copilot/sussed-plugin/skills/sussed-cottage-review/references/: description-patterns.md  ideal-profile.md  review-schema.md
.copilot/sussed-plugin/skills/sussed-garden-review/: SKILL.md
sussed/: .env.example  .gitignore  README.md  cottage_config.yaml  docker-compose.yml  garden_config.yaml  pyproject.toml  search_config.yaml  simple_config.yaml
sussed/docs/: cli.md  configuration.md
sussed/scripts/: init-db.sql
sussed/src/sussed/: __init__.py  cli.py  config.py  service.py  service_templates.py
sussed/src/sussed/agent/: __init__.py  autonomous.py  config.py  llm_analyzer.py  server.py  tools.py
sussed/src/sussed/db/: __init__.py  connection.py  models.py  operations.py
sussed/src/sussed/dedup/: __init__.py  detector.py  matcher.py
sussed/src/sussed/feed/: __init__.py  builder.py  feed.css  feed.js  models.py  renderer.py  template.html
sussed/src/sussed/hunt/: __init__.py  config.py  fetcher.py  formatter.py  llm_analyzer.py  runner.py  scorer.py
sussed/src/sussed/models/: __init__.py  sreality.py
sussed/src/sussed/review/: __init__.py  models.py  service.py
sussed/src/sussed/scrapers/: __init__.py  refresh.py  runner.py  sreality.py
sussed/tests/: __init__.py  test_cli_dedup.py  test_cli_enrich.py  test_cli_feed.py  test_cli_refresh.py  test_cli_review.py  test_dedup_detector.py  test_dedup_matcher.py  test_feed_builder.py  test_feed_fresh_query.py  test_feed_renderer.py  test_hunt_scorer.py  test_operations_price.py  test_refresh.py  test_review_models.py  test_review_service.py  test_scoring.py  test_scrape_runner_dedup.py  test_service.py  test_sreality_v1_params.py  test_sreality_v1_parse.py
sussed/tests/fixtures/: sreality_v1_detail_sample.json  sreality_v1_search_sample.json
(+3 files in other folders)
