[project]
name = "sussed"
version = "0.1.0"
description = "AI-powered real estate agent that susses out the market so you don't have to 🏠🔥"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "psegedy" }
]
keywords = ["real-estate", "ai-agent", "scraper", "sreality", "agno"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    # Async HTTP client (because requests is mid)
    "httpx>=0.28.0",
    # Database
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",           # Async PostgreSQL driver
    "sqlalchemy[asyncio]>=2.0.0",
    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",  # For env config
    # Logging (loguru supremacy)
    "loguru>=0.7.0",
    # CLI
    "typer>=0.15.0",
    "rich>=13.9.0",              # Pretty terminal output
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
llm = [
    # AI Agent Framework
    "agno>=1.0.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
sussed = "sussed.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sussed"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["sussed"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
